// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BorderedBox renders correctly as a href link 1`] = `
<DocumentFragment>
  .emotion-2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  -webkit-transition: box-shadow 0.2s ease,border-color 0.2s ease;
  transition: box-shadow 0.2s ease,border-color 0.2s ease;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: 2px 2px 14px 8px #eeeeff;
}

<a
    class="emotion-0 emotion-1 emotion-2"
    href="/"
  >
    Link BorderedBox
  </a>
</DocumentFragment>
`;

exports[`BorderedBox renders correctly as a span 1`] = `
<DocumentFragment>
  .emotion-1 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

<span
    class="emotion-0 emotion-1"
  >
    Span BorderedBox
  </span>
</DocumentFragment>
`;

exports[`BorderedBox renders correctly as a to link 1`] = `
<DocumentFragment>
  .emotion-2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  -webkit-transition: box-shadow 0.2s ease,border-color 0.2s ease;
  transition: box-shadow 0.2s ease,border-color 0.2s ease;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: 2px 2px 14px 8px #eeeeff;
}

<a
    class="emotion-0 emotion-1 emotion-2"
    href="/"
    to="/"
  >
    Link BorderedBox
  </a>
</DocumentFragment>
`;

exports[`BorderedBox renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-1 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

<div
    class="emotion-0 emotion-1"
  >
    Sample BorderedBox
  </div>
</DocumentFragment>
`;

exports[`BorderedBox renders correctly with multiple vertical variant 1`] = `
<DocumentFragment>
  .emotion-1 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
}

.emotion-1>* {
  margin-top: 0;
}

.emotion-1>*+* {
  margin-top: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    Vertical BorderedBox
  </div>
  .emotion-2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  -webkit-transition: box-shadow 0.2s ease,border-color 0.2s ease;
  transition: box-shadow 0.2s ease,border-color 0.2s ease;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2>* {
  margin-top: 0;
}

.emotion-2>*+* {
  margin-top: 16px;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: 2px 2px 14px 8px #eeeeff;
}

<a
    class="emotion-0 emotion-1 emotion-2"
    href="/"
  >
    Vertical BorderedBox
  </a>
  .emotion-2 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  -webkit-transition: box-shadow 0.2s ease,border-color 0.2s ease;
  transition: box-shadow 0.2s ease,border-color 0.2s ease;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2>* {
  margin-top: 0;
}

.emotion-2>*+* {
  margin-top: 16px;
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-color: #4f0599;
  box-shadow: 2px 2px 14px 8px #eeeeff;
}

<a
    class="emotion-0 emotion-1 emotion-2"
    href="/"
    to="/"
  >
    Vertical BorderedBox
  </a>
</DocumentFragment>
`;
